--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
         </div>
     </header>
     <section class="video margin-bottom-medium">
+        <div class="name-overlay">
+            <div class="name-overlay__container">
+                <div class="name-overlay__primary">Austin Scott</div>
+                <div class="name-overlay__sub">Software Developer</div>
+            </div>
+        </div>
         <div class="bg-video">
             <video class="bg-video__content" autoplay muted loop>
                 <source src="assets/video.mp4" type="video/mp4">
@@ -77,7 +83,7 @@
         <div class="contact__content container">
             <h1 class="section-title margin-top-small margin-bottom-small">Contact Me</h1>
 
-            <div class="form">
+            <form action=" https://du3avgwl1g.execute-api.us-east-1.amazonaws.com/prod/email" method="post" class="form">
                 <div class="form__row">
                         <label for="first-name"></label>
                         <input id="first-name" placeholder="First Name" class="form__input" type="text">
@@ -94,8 +100,21 @@
                 </div>
                 <div class="form__row">
                     <label for="message"></label>
-                    <textarea id="message" placeholder="Type Message" class="form__input" type="text">
+                    <textarea id="message" placeholder="Type Message" class="form__input form__textareas" type="text"></textarea>
                 </div>
+                <button class="btn btn--primary">Submit</button>
+            </form>
+        </div>
+    </section>
+    <section class="footer">
+        <div class="footer__container container">
+            <div class="footer__item text">Thanks for checking out my site!</div>
+            <div class="footer__item">
+                <h3 class="section-sub-title margin-bottom-small">Useful Links</h3>
+                <ul class="footer__link-list">
+                    <li class="footer__link-item"><a class="footer__link" href="https://github.com/aj11131">Github</a></li>
+                    <li class="footer__link-item"><a class="footer__link" href="https://www.linkedin.com/in/austin-scott-b08750140/">Linkedin</a></li>
+                </ul>
             </div>
         </div>
     </section>
